// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> should not render if no props are passed 1`] = `""`;

exports[`<Content /> should render grouped properties 1`] = `
<div
  className={
    Object {
      "data-css-y50mcd": "",
    }
  }
>
  <GroupedProperties
    groups={
      Array [
        "Group 1",
        "Group 2",
      ]
    }
    properties={
      Array [
        Object {
          "displayGroup": "Group 1",
          "label": "Test 1",
          "name": "test1",
        },
        Object {
          "displayGroup": "Group 1",
          "label": "Test 2",
          "name": "test2",
        },
        Object {
          "displayGroup": "Group 2",
          "label": "Test 3",
          "name": "test3",
        },
        Object {
          "displayGroup": "Group 2",
          "label": "Test 4",
          "name": "test4",
        },
      ]
    }
  />
</div>
`;

exports[`<Content /> should render simple rows if not in beta 1`] = `
<Wrapper
  dense={false}
>
  <Rows
    properties={
      Array [
        Object {
          "displayGroup": "Group 1",
          "label": "Test 1",
          "name": "test1",
        },
        Object {
          "displayGroup": "Group 1",
          "label": "Test 2",
          "name": "test2",
        },
        Object {
          "displayGroup": "Group 2",
          "label": "Test 3",
          "name": "test3",
        },
        Object {
          "displayGroup": "Group 2",
          "label": "Test 4",
          "name": "test4",
        },
      ]
    }
  />
</Wrapper>
`;

exports[`<Content /> should render simple rows of no groups could be found 1`] = `
<Wrapper
  dense={false}
>
  <Rows
    properties={
      Array [
        Object {
          "label": "Test 1",
          "name": "test1",
        },
      ]
    }
  />
</Wrapper>
`;
